some minor changes

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,8 +10,8 @@
   font-family: "Prompt", sans-serif;
 }
 
-.oswald {
-  font-family: "Oswald", sans-serif;
+.prompt {
+  font-family: "Prompt", sans-serif;
 }
 
 .neon:hover {
